// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smallCatches.unit GET /smallCatches/{smallCatchId} should return a 200 status code and the small catch if it is found 1`] = `
{
  "_links": {
    "activity": {
      "href": "http://localhost:3000/api/smallCatches/33551/activity",
    },
    "activityEntity": {
      "href": "http://localhost:3000/api/activities/133750",
    },
    "self": {
      "href": "http://localhost:3000/api/smallCatches/33551",
    },
    "smallCatch": {
      "href": "http://localhost:3000/api/smallCatches/33551",
    },
  },
  "counts": [
    {
      "_links": {
        "method": {
          "href": "http://localhost:3000/api/methods/1",
        },
      },
      "count": 2,
    },
    {
      "_links": {
        "method": {
          "href": "http://localhost:3000/api/methods/3",
        },
      },
      "count": 2,
    },
  ],
  "createdAt": "2024-12-11T10:07:11.726Z",
  "id": "33551",
  "month": "JANUARY",
  "noMonthRecorded": false,
  "released": 1,
  "reportingExclude": false,
  "updatedAt": "2024-12-11T10:07:11.726Z",
  "version": "2024-12-11T10:07:11.729Z",
}
`;

exports[`smallCatches.unit GET /smallCatches/{smallCatchId}/activity should return a 200 status code and the activity if the small catch and activity is found 1`] = `
{
  "_links": {
    "activity": {
      "href": "http://localhost:3000/api/activities/3",
    },
    "catches": {
      "href": "http://localhost:3000/api/activities/3/catches",
    },
    "river": {
      "href": "http://localhost:3000/api/activities/3/river",
    },
    "self": {
      "href": "http://localhost:3000/api/activities/3",
    },
    "smallCatches": {
      "href": "http://localhost:3000/api/activities/3/smallCatches",
    },
    "submission": {
      "href": "http://localhost:3000/api/activities/3/submission",
    },
  },
  "createdAt": "2024-10-10T13:26:30.344Z",
  "daysFishedOther": 0,
  "daysFishedWithMandatoryRelease": 1,
  "id": "3",
  "updatedAt": "2024-10-10T13:26:30.344Z",
  "version": "2024-10-10T13:26:30.345Z",
}
`;

exports[`smallCatches.unit POST /smallCatches should return the created small catch if the call to create it is successful 1`] = `
{
  "_links": {
    "activity": {
      "href": "http://localhost:3000/api/smallCatches/1/activity",
    },
    "activityEntity": {
      "href": "http://localhost:3000/api/activities/3",
    },
    "self": {
      "href": "http://localhost:3000/api/smallCatches/1",
    },
    "smallCatch": {
      "href": "http://localhost:3000/api/smallCatches/1",
    },
  },
  "counts": [
    {
      "_links": {
        "method": {
          "href": "http://localhost:3000/api/methods/1",
        },
      },
      "count": 3,
    },
    {
      "_links": {
        "method": {
          "href": "http://localhost:3000/api/methods/2",
        },
      },
      "count": 2,
    },
    {
      "_links": {
        "method": {
          "href": "http://localhost:3000/api/methods/3",
        },
      },
      "count": 1,
    },
  ],
  "createdAt": "2024-10-11T09:30:57.463+0000",
  "id": "1",
  "month": "FEBRUARY",
  "noMonthRecorded": false,
  "released": 3,
  "reportingExclude": false,
  "updatedAt": "2024-10-11T09:30:57.463+0000",
  "version": "2024-10-11T09:30:57.463+0000",
}
`;
